--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
 		</dependency>
 		-->
 
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-broker</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
