--- a/client/bower.json
+++ b/client/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^0.5",
-    "core-ajax": "Polymer/core-ajax#^0.5"
+    "core-ajax": "Polymer/core-ajax#^0.5",
+    "polymer-currency-filter": "~0.1.1"
   }
 }
