--- a/client/bower.json
+++ b/client/bower.json
@@ -14,8 +14,11 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^0.5",
+    "polymer": "Polymer/polymer#^0.5.6",
     "core-ajax": "Polymer/core-ajax#^0.5",
     "polymer-currency-filter": "~0.1.1"
+  },
+  "resolutions": {
+    "webcomponentsjs": "^0.6.0"
   }
 }
