--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,11 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.1.0"
+    "polymer": "Polymer/polymer#^1.1.0",
+    "core-ajax": "Polymer/core-ajax#^0.5.6"
+  },
+  "resolutions": {
+    "polymer": "^1.1.0",
+    "webcomponentsjs": "^0.7.2"
   }
 }
