--- a/client/bower.json
+++ b/client/bower.json
@@ -18,7 +18,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.1.0",
-    "core-ajax": "Polymer/core-ajax#^0.5.6"
+    "core-ajax": "Polymer/core-ajax#^0.5.6",
+    "iron-ajax": "polymerelements/iron-ajax#~1.0.6"
   },
   "resolutions": {
     "polymer": "^1.1.0",
