--- a/client/bower.json
+++ b/client/bower.json
@@ -18,11 +18,11 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.1.0",
-    "core-ajax": "Polymer/core-ajax#^0.5.6",
-    "iron-ajax": "polymerelements/iron-ajax#~1.0.6"
+    "core-ajax": "Polymer/core-ajax",
+    "iron-ajax": "polymerelements/iron-ajax"
   },
   "resolutions": {
-    "polymer": "^1.1.0",
+    "polymer": "^1.0.0",
     "webcomponentsjs": "^0.7.2"
   }
 }
