--- a/client/bower.json
+++ b/client/bower.json
@@ -21,6 +21,7 @@
     "angular": "~1.4.7",
     "bootstrap": "~3.3.5",
     "jquery": "~2.1.4",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-route": "~1.4.7"
   }
 }
